--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <title>Sam Madden</title>
-  <link rel="stylesheet" href="main.css">
+  <head>
+    <title>Sam Madden</title>
+    <link rel="stylesheet" href="main.css">
   </head>
+  <body>
+    <h1> Hi, My name is Samuel. </h1>
+  </body>  
 </html>
