--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <h1> Hi, My name is Samuel. I have been a student at the University of Georgia since 2015. I am majoring in communications. I am originally from Long Beach Island, New Jersey.  </h1>
+    <h1> Hi, My name is Samuel. 
+    <h1> I have been a student at the University of Georgia since 2015. I am majoring in communications.
+    <h1> I am originally from Long Beach Island, New Jersey.  </h1>
   </body>  
 </html>
