--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <h1> Hi, My name is Samuel. 
     <p> I have been a student at the University of Georgia since 2015. I am majoring in communications. 
       I am originally from Long Beach Island, New Jersey. I have played football ever since I was twelve years old. It was always
-      my dream to play football professionally\. I have been a student at the University of Georgia since 2015. I am majoring in communications. 
-      I am originally from Long Beach Island, New Jersey. It was always a dream of mine to play football professionally. I have played football ever since I was twelve years old. I was always too big to play in the recreational leagues because they had weight classes and being taller and bigger than most middle school age kids I did not make the cut. That is until my family moved us to the little town of Barnegat, New Jersey. There in 2008 I got my first taste of football. I was hooked instantly. As the years went by my passion for the game grew. Freshman year of high school I had earned a scholarship to play football for a small parochial school in South Jersey. I learned a lot in a short amount of time there. Lessons I carry with me to this day were instilled in me at a young age at Holy Spirit High School. I credit that high school’s football coach for helping propel me to the level that I have gotten to in football. To that school and coach I am forever grateful.
+      my dream to play football professionally. I have been a student at the University of Georgia since 2015.
+      I am majoring in communications.I am originally from Long Beach Island, New Jersey. It was always a dream of mine to play football professionally. 
+      I have played football ever since I was twelve years old. I was always too big to play in the recreational leagues because they had weight classes and
+      being taller and bigger than most middle school age kids I did not make the cut. That is until my family moved us to the little town of Barnegat, New Jersey.
+      There in 2008 I got my first taste of football. I was hooked instantly. As the years went by my passion for the game grew. Freshman year of high school I had earned 
+      a scholarship to play football for a small parochial school in South Jersey. I learned a lot in a short amount of time there. Lessons I carry with me to this day were 
+      instilled in me at a young age at Holy Spirit High School. I credit that high school’s football coach for helping propel me to the level that I have gotten to in football. 
+      To that school and coach I am forever grateful.
     </h1>
   </body>  
 </html>
