--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       instilled in me at a young age at Holy Spirit High School. I credit that high school’s football coach for helping propel me to the level that I have gotten to in football. 
       To that school and coach I am forever grateful.
     </h1>
- <img src= "https://shoresportsnetwork.com/files/2014/08/Sam-Madden-622x630.jpg" width="300" height= "300"
+ <img src= "https://shoresportsnetwork.com/files/2014/08/Sam-Madden-622x630.jpg" width="300" height= "300">
 
 </body>
 </html>
