--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       my dream to play football professionally. I have been a student at the University of Georgia since 2015. I am majoring in communications
 
-     <p> .I am originally from Long Beach Island, New Jersey. It was always a dream of mine to play football professionally. 
+     <p style="color:MediumSeaGreen;"> .I am originally from Long Beach Island, New Jersey. It was always a dream of mine to play football professionally. 
 
       I have played football ever since I was twelve years old. I was always too big to play in the recreational leagues because they had weight classes and
 
