--- a/index.html
+++ b/index.html
@@ -28,18 +28,49 @@
       being taller and bigger than most middle school age kids I did not make the cut. That is until my family moved us to the little town of Barnegat, New Jersey.
 
       There in 2008 I got my first taste of football. I was hooked instantly. </P>
-	 <p> As the years went by my passion for the game grew. Freshman year of high school I had earned 
-
-      a scholarship to play football for a small parochial school in South Jersey. I learned a lot in a short amount of time there. Lessons I carry with me to this day were 
-
-      instilled in me at a young age at Holy Spirit High School. I credit that high school’s football coach for helping propel me to the level that I have gotten to in football. 
-
-      To that school and coach I am forever grateful.</p>
-
-    
+	 <p> I came to the University of Georgia in 2015 along with twnety seven other enrollees. 
+     Below is a table with some data.  </p>
 
  <img src= "Sam-Madden-622x630.jpg" width="300" height= "300">
 
+
+<table>
+    <tr>
+      <th>Company</th>
+      <th>Contact</th>
+      <th>Country</th>
+    </tr>
+    <tr>
+      <td>Alfreds Futterkiste</td>
+      <td>Maria Anders</td>
+      <td>Germany</td>
+    </tr>
+    <tr>
+      <td>Centro comercial Moctezuma</td>
+      <td>Francisco Chang</td>
+      <td>Mexico</td>
+    </tr>
+    <tr>
+      <td>Ernst Handel</td>
+      <td>Roland Mendel</td>
+      <td>Austria</td>
+    </tr>
+    <tr>
+      <td>Island Trading</td>
+      <td>Helen Bennett</td>
+      <td>UK</td>
+    </tr>
+    <tr>
+      <td>Laughing Bacchus Winecellars</td>
+      <td>Yoshi Tannamuri</td>
+      <td>Canada</td>
+    </tr>
+    <tr>
+      <td>Magazzini Alimentari Riuniti</td>
+      <td>Giovanni Rovelli</td>
+      <td>Italy</td>
+    </tr>
+  </table>
 
 
 </body>
