--- a/index.html
+++ b/index.html
@@ -28,47 +28,37 @@
       being taller and bigger than most middle school age kids I did not make the cut. That is until my family moved us to the little town of Barnegat, New Jersey.
 
       There in 2008 I got my first taste of football. I was hooked instantly. </P>
-	 <p> I came to the University of Georgia in 2015 along with twnety seven other enrollees. 
-     Below is a table with some data.  </p>
+	 <p> I came to the University of Georgia in 2015 along with twenty seven other enrollees. 
+     Below is a table with some data about a few of the palyers I came here with.  </p>
 
  <img src= "Sam-Madden-622x630.jpg" width="300" height= "300">
 
 
 <table>
     <tr>
-      <th>Company</th>
-      <th>Contact</th>
-      <th>Country</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Position</th>
     </tr>
     <tr>
-      <td>Alfreds Futterkiste</td>
-      <td>Maria Anders</td>
-      <td>Germany</td>
+      <td>Trenton</td>
+      <td>Thompson</td>
+      <td>Defensive Line</td>
     </tr>
     <tr>
-      <td>Centro comercial Moctezuma</td>
-      <td>Francisco Chang</td>
-      <td>Mexico</td>
+      <td>Roquan</td>
+      <td>Smith</td>
+      <td>Linebacker</td>
     </tr>
     <tr>
-      <td>Ernst Handel</td>
-      <td>Roland Mendel</td>
-      <td>Austria</td>
+      <td>Sage</td>
+      <td>Hardin</td>
+      <td>Offensive Line</td>
     </tr>
     <tr>
-      <td>Island Trading</td>
-      <td>Helen Bennett</td>
-      <td>UK</td>
-    </tr>
-    <tr>
-      <td>Laughing Bacchus Winecellars</td>
-      <td>Yoshi Tannamuri</td>
-      <td>Canada</td>
-    </tr>
-    <tr>
-      <td>Magazzini Alimentari Riuniti</td>
-      <td>Giovanni Rovelli</td>
-      <td>Italy</td>
+      <td>Natrez</td>
+      <td>Patrick</td>
+      <td>Linebacker</td>
     </tr>
   </table>
 
