--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
 
     <h1> Hi, My name is Samuel. </h1>
-
+    <h2>I am twenty two years old.</h2>
     <p> I have been a student at the University of Georgia since 2015. I am majoring in communications. 
 
       I am originally from Long Beach Island, New Jersey. I have played football ever since I was twelve years old. It was always
@@ -62,7 +62,7 @@
     </tr>
   </table>
 
-
+  <a href="https://247sports.com/college/georgia/Season/2015-Football/Commits/">2015 UGA football signees</a>
 </body>
 
 </html>
