--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
 
       There in 2008 I got my first taste of football. I was hooked instantly. </P>
 	 <p> I came to the University of Georgia in 2015 along with twenty seven other enrollees. 
-     Below is a table with some data about a few of the palyers I came here with.  </p>
+     Below is a table with some data about a few of the players I came here with.  </p>
 
  <img src= "Sam-Madden-622x630.jpg" width="300" height= "300">
-
+    <caption>Samuel Madden during a high school football practice in 2014.</caption>
 
 <table>
-    <tr>
+<colgroup>
+    <col span="3" style="background-color:blue">
+    <col style="background-color:grey">
+  </colgroup>
+  <tr>
       <th>First Name</th>
       <th>Last Name</th>
       <th>Position</th>
