--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <table>
 <colgroup>
-    <col span="3" style="background-color:blue">
+    <col span="3" style="background-color:grey">
     <col style="background-color:grey">
   </colgroup>
   <tr>
